# IGRShadowMapping

./: CMakeLists.txt
src/: fragmentShader.glsl  main.cpp
